<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e8eaed"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/inputsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:padding="10dp">

        <EditText
            android:id="@+id/inputOption"
            android:layout_marginTop="10dp"
            android:layout_width="290dp"
            android:layout_height="40dp"
            android:hint="Write a word or expression" />

        <ImageButton
            android:id="@+id/buttonAddOption"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_toRightOf="@id/inputOption"
            android:elevation="5dp"
            android:src="@mipmap/ic_add_black_24dp"
            />

        <ImageButton
            android:id="@+id/buttonAddList"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_toRightOf="@id/buttonAddOption"
            android:elevation="5dp"
            android:src="@mipmap/ic_playlist_add_black_24dp"
            />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layoutRecycleView"
        android:layout_width="match_parent"
        android:layout_height="480dp"
        android:layout_below="@+id/inputsLayout"
        android:gravity="top"
        android:orientation="vertical">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/bottomControls"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/layoutRecycleView"
        android:gravity="center"

        android:orientation="vertical" >

        <ImageButton
            android:id="@+id/buttonRandomize"
            style="@style/styleButton"
            android:layout_height="45dp"
            android:layout_width="210dp"
            android:elevation="3dp"
            android:src="@mipmap/ic_link_black_48dp"/>
    </LinearLayout>

</RelativeLayout>