<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">


    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        card_view:cardBackgroundColor="#ffffff"
        card_view:cardElevation="5dp"
        android:layout_marginTop="123dp"
        android:layout_gravity="center"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

    <TextView
        android:id="@+id/resultText"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="TextView"
        android:textSize="15dp"
    />
    </android.support.v7.widget.CardView>
</RelativeLayout>